ajout de normalize.css

--- a/index.html
+++ b/index.html
@@ -3,10 +3,12 @@
 <head>
   <meta charset="utf-8">
   <title>Jonathan Gomez || Développeur Web</title>
-
+  <link rel="icon" type="image/png" href= "./image/logo_tete.png"/>
   <link rel="stylesheet" href="./css/animate.css">
   <link rel="stylesheet" href="./css/imagehover.css">
+  <link rel="stylesheet" href="./css/normalize.css">
   <link rel="stylesheet" href="./css/main.css">
+
   <link href='https://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet' type='text/css'>
   <script src="./script/wow.min.js"></script>
   <script src="./script/script.js"></script>
@@ -65,21 +67,27 @@
   <section id="presentation">
     <h2 class="wow slideInLeft" data-wow-duration="2s" data-wow-delay="450ms" data-wow-offset="200">
       Vous cherchez un Développeur Web ?</h2>
-      <p>Ça tombe bien ! Je suis passionné par le web, freelance depuis plus de 7 ans.
+      <p class="wow slideInLeft" data-wow-duration="2s" data-wow-delay="450ms" data-wow-offset="200">
+      Ça tombe bien ! Je suis passionné par le web et je suis actuellement une formation de Développeur Web
+        au sein de <a class="js-scrollTo" href="#">BeWeb</a>
+
         Si mon profil vous intéresse n'hésitez pas à me contacter ou regardez
-        <a class="js-scrollTo" href="#realisation">mes réalisations.</a></p>
+        <a href="#realisation">mes réalisations.</a></p></br>
     <img id="profil" class="wow zoomIn" data-wow-duration="2s" data-wow-delay="850ms" data-wow-offset="300"
     src="./image/logo_tete.png" alt="Photo de profil" />
 
     <h3 class=" wow bounceInUp" data-wow-duration="1s" data-wow-delay="850ms">A propos de moi</h3>
 
     <p id="apropos" class=" wow bounceInUp" data-wow-duration="2s" data-wow-delay="1050ms">
-      Je m'appelle Jonathan Gomez, j'ai commencé le développement web et le web design pour développer
-      un petit site perso et c'est rapidement devenu une vraie vocation. J'aime expérimenter, découvrir et
+      J'aime expérimenter, découvrir et
       apprendre au fur et à mesure de mes projets pros et perso.
-      En plus de mon activité de Freelance j'enregistre des Formations Vidéos et je travaille sur différents
-      projets personnels.
+
     </p>
+
+    <div>
+      <!-- Ici logo de mes qualités : "curieux", "aime apprendre", "esprit d'equipe"...-->
+    </div>
+
     <h3 class=" wow bounceInUp" data-wow-duration="1s" data-wow-delay="850ms">Ils m'ont fait confiance</h3>
 
     <p id="temoignage" class=" wow bounceInUp" data-wow-duration="1s" data-wow-delay="850ms">
@@ -129,6 +137,10 @@
     <h2 class="wow bounceInUp" data-wow-duration="600ms" data-wow-delay="450ms">Expériences professionnelles</h2>
 
     <!--- ICI UNE FRISE-->
+
+    <header><h4>Community Manager</h4></header>
+    <article>Avril 2016-Novembre 2016</article>
+    <footer>BeWeb</footer>
 
       <header><h4>Opérateur de réception</h4></header>
       <article>Intérim Juillet 2010-Décembre 2010</article>
@@ -211,18 +223,22 @@ src="./image/logo_symfony.png" alt="logo symfony" />
 
       <div id="passion">
       <div class = "elementpassion">
-      <figure class="imghvr-zoom-in"><img class="imgloisir" src="./image/livre2.jpg" alt="livre">
+      <figure class="imghvr-zoom-in"><img class="imgloisir" src="./image/learningaddict.png" alt="livre">
         <figcaption>
-          <h3>Je suis un lecteur assidu</h3>
+          <h3>Learning addict</h3>
 
           <p>
             Je me suis lancé le défi de lire les
             <a class="personal"href="https://personalmba.com/best-business-books/">99 livres du Personal MBA</a>
-            (qui recense les meilleurs livres Business).</br></br>
+            (qui recense les meilleurs livres Business). A ce jour, j'en ai lu 24.</br></br>
 
+            J'apprend l'anglais avec l'application <a class="personal"href="http://www.mosalingua.com/">Mosalingua
+            </a>et en participant à des événements d'échanges linguistiques.</br></br>
 
-
-          A ce jour, j'en ai lu 24.
+            Je suis également membre de <a class="personal"href="http://www.toastmasters.org/">Toastmaster
+            </a>, une association à but non lucratif internationale dont l'objectif
+            est d'aider ses membres à améliorer leurs compétences en matière de communication et de leadership par
+            la prise de parole en public.
 
           </p>
         </figcaption>
@@ -252,7 +268,7 @@ src="./image/logo_symfony.png" alt="logo symfony" />
   <figure class="imghvr-zoom-in"><img class="imgloisir" src="./image/voyage.jpg" alt="voyage">
     <figcaption>
       <h3>Je souhaite voyager</h3>
-      <p>Life is too important to be taken seriously!</p>
+      <p>Je veux découvrir le monde</p>
     </figcaption>
   </figure>
 </div>
