--- a/index.html
+++ b/index.html
@@ -332,11 +332,11 @@ src="./portfolio/image/logo_symfony.png" alt="logo symfony" />
             </a>et en participant à des événements d'échanges linguistiques.</br></br>
 
             Je suis également membre de <a class="personal"href="http://www.toastmasters.org/">Toastmaster
-            </a>, une association à but non lucratif internationale dont l'objectif
+            </a>, une association internationale dont l'objectif
             est d'aider ses membres à améliorer leurs compétences en matière de communication et de leadership par
             la prise de parole en public.
 
-            JE VAIS A DES CONFERENCES
+            J'assiste aussi régulièrement à des événements(conférences,salon...etc).
 
           </p>
         </figcaption>
@@ -362,15 +362,7 @@ src="./portfolio/image/logo_symfony.png" alt="logo symfony" />
 
   </div>
 
-  <div class="elementpassion">
-  <figure class="imghvr-zoom-in"><img class="imgloisir" src="./portfolio/image/voyage.jpg" alt="voyage">
-    <figcaption>
-      <h3>Je souhaite voyager</h3>
-      <p>Je veux découvrir le monde</p>
-    </figcaption>
-  </figure>
-</div>
-</div>
+
 </section>
 
 
