ajout slider témoignage

--- a/index.html
+++ b/index.html
@@ -93,9 +93,28 @@
         Une sorte de Dieu du développement c'est pour tout ça qu'il faut l'embaucher. Ah oui il sent super bon aussi.
         </p>
         <p class=" nomclient wow bounceInUp" data-wow-duration="1s" data-wow-delay="850ms">
-          <em>Barack Obama, Président Américain, Client heureux</em></p></li>
-    		<li>Another slide</li>
-    		<li>My last slide</li>
+          <em>Séverine Saint-Martin, Directrice BeWeb, Directrice heureuse</em></p></li>
+
+    		<li><p class="wow bounceInUp" data-wow-duration="1s" data-wow-delay="850ms">
+          Jonathan est super, beau, gentil, il travaille bien. C'est mon idole. Un talent inné, c'est le meilleur.
+        Une sorte de Dieu du développement c'est pour tout ça qu'il faut l'embaucher. Ah oui il sent super bon aussi.
+        </p>
+        <p class=" nomclient wow bounceInUp" data-wow-duration="1s" data-wow-delay="850ms">
+          <em>Loic Derrieux, Formateur BeWeb, Formateur heureux</em></p></li>
+
+    		<li><p class="wow bounceInUp" data-wow-duration="1s" data-wow-delay="850ms">
+          Jonathan est super, beau, gentil, il travaille bien. C'est mon idole. Un talent inné, c'est le meilleur.
+        Une sorte de Dieu du développement c'est pour tout ça qu'il faut l'embaucher. Ah oui il sent super bon aussi.
+        </p>
+        <p class=" nomclient wow bounceInUp" data-wow-duration="1s" data-wow-delay="850ms">
+          <em>Maddyson Weppe, BeWeb</em></p></li>
+
+          <li><p class="wow bounceInUp" data-wow-duration="1s" data-wow-delay="850ms">
+            Jonathan est super, beau, gentil, il travaille bien. C'est mon idole. Un talent inné, c'est le meilleur.
+          Une sorte de Dieu du développement c'est pour tout ça qu'il faut l'embaucher. Ah oui il sent super bon aussi.
+          </p>
+          <p class=" nomclient wow bounceInUp" data-wow-duration="1s" data-wow-delay="850ms">
+            <em>Perle Estru, amoureuse passionée</em></p></li>
     	</ul>
     </div>
     </div>
@@ -328,17 +347,16 @@ src="./portfolio/image/logo_symfony.png" alt="logo symfony" />
           <p>
             Je me suis lancé le défi de lire les
             <a class="personal"href="https://personalmba.com/best-business-books/">99 livres du Personal MBA</a>
-            (qui recense les meilleurs livres Business). A ce jour, j'en ai lu 24.</br></br>
+            (les meilleurs livres Business).</br></br>
 
-            J'apprend l'anglais avec l'application <a class="personal"href="http://www.mosalingua.com/">Mosalingua
-            </a>et en participant à des événements d'échanges linguistiques.</br></br>
+            J'apprend l'anglais en participant à des événements d'échanges linguistiques.</br></br>
 
-            Je suis également membre de <a class="personal"href="http://www.toastmasters.org/">Toastmaster
+            Je suis membre de <a class="personal"href="http://www.toastmasters.org/">Toastmaster
             </a>, une association internationale dont l'objectif
-            est d'aider ses membres à améliorer leurs compétences en matière de communication et de leadership par
-            la prise de parole en public.
+            est d'aider ses membres à s'améliorer en matière de communication et de leadership par
+            la prise de parole en public.</br></br>
 
-            J'assiste aussi régulièrement à des événements(conférences,salon...etc).
+            J'assiste régulièrement à des événements(Salon,conf...etc).
 
           </p>
         </figcaption>
