ajout texte réalisation

--- a/index.html
+++ b/index.html
@@ -2,6 +2,19 @@
 <html lang="fr">
 <head>
   <meta charset="utf-8">
+  <meta name="description" content=" Jonathan Gomez Développeur Web. J'ai intégré l'école du Numérique,
+  BeWeb à Lunel by Fondespiere et Simplon. Création de sites internet avec les langages de programmation
+  (Front-End et Back-End). J'apprend également à gérer la communication d'une entreprise sur les réseaux sociaux.
+  Voici mon portfolio où vous retrouverez tous mes projets ainsi que les informations pour me contacter." />
+  <meta name="author" content="Jonathan Gomez">
+
+  <meta name="keywords" content="jonathan, gomez, web, developpeur web,front-end,back-end, web developper,creation,
+  inspiration, html, css, javascript, php, symfony, angular, jquery, web design, responsive, web development,internet,
+  site internet,website, projet, project, work, travaux, web, facebook, github, twitter, création, portfolio, webdesign,
+  wordpress, cms,developper,développeur, developpeur web montpellier, montpellier">
+
+
+
   <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, user-scalable=no">
   <title>Jonathan Gomez || Développeur Web</title>
   <link rel="icon" type="image/png" href= "./portfolio/image/logo_tete.png"/>
@@ -84,7 +97,6 @@
 
     <p id="apropos" class=" wow bounceInUp" data-wow-duration="2s" data-wow-delay="1050ms">
       J'aime expérimenter, découvrir et apprendre au fur et à mesure de mes projets pros et perso.
-
     </p>
     <div class="automatic-slider">
     	<ul>
@@ -202,19 +214,25 @@
   		<div class="events-content">
   			<ol>
   				<li class="selected" data-date="16/01/2014">
-  					<h2>Community Manager</h2>
+  					<h3>Community Manager</h3>
   					<em>Avril 2016 à Novembre 2016,BEWEB, Lunel</em>
   					<p>
                Missions : Je suis chargé de représenter BeWeb sur les réseaux sociaux. Je gère donc le compte Twitter
                ainsi que le compte Facebook de Beweb.<br><br>
                Compétences pour ce poste : Qualités rédactionnelles, fiabilité, réactivité et sociabilité.
+
             </p>
+            <a href="https://www.facebook.com/BewebLunel">
+              <img class="community" src="./portfolio/image/fbbeweb.png" alt="fbbeweb" /></a>
+
+            <a href="https://twitter.com/BeWebLunel">
+              <img class="community" src="./portfolio/image/twitterbeweb.png" alt="fbbeweb" /></a>
   				</li>
 
 
           <li data-date="28/03/2014">
   					<!-- event description here -->
-  					<h2>Opérateur de Réception</h2>
+  					<h3>Opérateur de Réception</h3>
   					<em>Intérim d'Avril 2014 à Avril 2016, FIBRE EXCELLENCE(Tarascon)</em>
   					<p>
               Activité : Production pâte à papier.<br>
@@ -229,7 +247,7 @@
 
           <li data-date="28/04/2014">
   					<!-- event description here -->
-  					<h2>Responsable location puis Conseiller de Vente</h2>
+  					<h3>Responsable location puis Conseiller de Vente</h3>
   					<em>Intérim Janvier 2014 LOXAM, Fos sur Mer.</em>
 
   					<p>
@@ -247,7 +265,7 @@
 
           <li data-date="28/05/2014">
   					<!-- event description here -->
-  					<h2>Attaché Commercial</h2>
+  					<h3>Attaché Commercial</h3>
   					<em>Contrat de professionalisation Janvier 2011 à Août 2012, STORES MICHEL, Nîmes</em>
 
   					<p>
@@ -261,7 +279,7 @@
 
           <li data-date="28/06/2014">
   					<!-- event description here -->
-  					<h2>Opérateur de Réception</h2>
+  					<h3>Opérateur de Réception</h3>
   					<em>Intérim Juillet 2010 à Décembre 2010, FIBRE EXCELLENCE(Tarascon)</em>
   					<p>
               Activité : Production pâte à papier.<br><br>
@@ -306,6 +324,8 @@ src="./portfolio/image/logo_symfony.png" alt="logo symfony" />
     src="./portfolio/image/logo_javascript.png" alt="logo javascript" />
     <img class="logoskill wow rotateIn" data-wow-duration="600ms" data-wow-delay="450ms" data-wow-offset="200"
     src="./portfolio/image/logo_angular.png" alt="logo angular" />
+    <img class="logoskill wow rotateIn" data-wow-duration="600ms" data-wow-delay="450ms" data-wow-offset="200"
+    src="./portfolio/image/logo_jquery.png" alt="logo jquery" />
   </section>
 
 <!--.........................BACK.................-->
@@ -314,8 +334,6 @@ src="./portfolio/image/logo_symfony.png" alt="logo symfony" />
     <!-- ICI LOGO LANGAGE -->
     <img class="logoskill wow rotateIn" data-wow-duration="600ms" data-wow-delay="450ms" data-wow-offset="200"
     src="./portfolio/image/logo_php.png" alt="logo php" />
-    <img class="logoskill wow rotateIn" data-wow-duration="600ms" data-wow-delay="450ms" data-wow-offset="200"
-    src="./portfolio/image/logo_jquery.png" alt="logo jquery" />
     <img class="logoskill wow rotateIn" data-wow-duration="600ms" data-wow-delay="450ms" data-wow-offset="200"
     src="./portfolio/image/logo_sql.png" alt="logo sql" />
   </section>
@@ -327,9 +345,17 @@ src="./portfolio/image/logo_symfony.png" alt="logo symfony" />
 
   <section id="realisation">
     <h2>Mes réalisations</h2>
+
+    <p>
+La seule façon de faire du bon travail est d’aimer ce que l'on fait. Je suis fier de tous mes projets , petits et grands,
+car ils m'ont tous permis d'apprendre quelques choses et de pousser mes limites.
+Pour faire un excellent travail , je suis à la recherche continue de nouveaux défis et possibilités d'amélioration.
+Déterminé à travailler plus dur et plus fort vers la perfection.
+    </p>
     <!--..........ICI UN ECRAN......-->
 
     <a href="#"><img id="ordi" src="./portfolio/image/ordi2.png" alt="Photo d'écran" /></a>
+
 
   </section>
 
@@ -348,8 +374,6 @@ src="./portfolio/image/logo_symfony.png" alt="logo symfony" />
             Je me suis lancé le défi de lire les
             <a class="personal"href="https://personalmba.com/best-business-books/">99 livres du Personal MBA</a>
             (les meilleurs livres Business).</br></br>
-
-            J'apprend l'anglais en participant à des événements d'échanges linguistiques.</br></br>
 
             Je suis membre de <a class="personal"href="http://www.toastmasters.org/">Toastmaster
             </a>, une association internationale dont l'objectif
