ajout texte réalisation

--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
           Une sorte de Dieu du développement c'est pour tout ça qu'il faut l'embaucher. Ah oui il sent super bon aussi.
           </p>
           <p class=" nomclient wow bounceInUp" data-wow-duration="1s" data-wow-delay="850ms">
-            <em>Perle Estru, amoureuse passionée</em></p></li>
+            <em>Jonathan Fournival, eleve BeWeb</em></p></li>
     	</ul>
     </div>
     </div>
@@ -347,9 +347,9 @@ src="./portfolio/image/logo_symfony.png" alt="logo symfony" />
     <h2>Mes réalisations</h2>
 
     <p>
-La seule façon de faire du bon travail est d’aimer ce que l'on fait. Je suis fier de tous mes projets , petits et grands,
+La seule façon de faire du bon travail est d’aimer ce que l'on fait. Je suis fier de tous mes projets, petits et grands,
 car ils m'ont tous permis d'apprendre quelques choses et de pousser mes limites.
-Pour faire un excellent travail , je suis à la recherche continue de nouveaux défis et possibilités d'amélioration.
+Pour faire un excellent travail , je suis constamment à la recherche de nouveaux défis et possibilités d'amélioration.
 Déterminé à travailler plus dur et plus fort vers la perfection.
     </p>
     <!--..........ICI UN ECRAN......-->
