début code propre

--- a/index.html
+++ b/index.html
@@ -65,16 +65,14 @@
 
 
 </header>
-
 <body>
 
   <section id="accueil">
 
     <h1 class="wow bounceInDown" data-wow-duration="3s" data-wow-delay="500ms">
       Bienvenue sur mon Portfolio</h1>
-    <h2 class="wow bounceInDown"data-wow-duration="3s" data-wow-delay="500ms">
-      Jonathan Gomez Développeur Web</h2>
-    <a href="#presentation">
+    <h2 class="wow bounceInDown"data-wow-duration="3s" data-wow-delay="500ms">Jonathan Gomez Développeur Web</h2>
+    <a class="js-scrollTo" href="#presentation">
       <img class="fleche wow infinite bounce" data-wow-duration="2s" data-wow-delay="1500ms"
       src="./portfolio/image/icone/arrows.png" alt="fleche" /></a>
   </section>
@@ -90,8 +88,7 @@
 
         Si mon profil vous intéresse n'hésitez pas à me <a href="#contact">contacter</a> et à regarder
         <a href="#realisation">mes réalisations.</a></p></br>
-    <img id="profil" class="wow zoomIn" data-wow-duration="2s" data-wow-delay="850ms" data-wow-offset="300"
-    src="./portfolio/image/logo_tete.png" alt="Photo de profil" />
+    <img id="profil" class="wow zoomIn" data-wow-duration="2s" data-wow-delay="850ms" data-wow-offset="300" src="./portfolio/image/logo_tete.png" alt="Photo de profil" />
 
     <h3 class=" wow bounceInUp" data-wow-duration="1s" data-wow-delay="850ms">A propos de moi</h3>
 
@@ -311,6 +308,10 @@
 src="./portfolio/image/logo_bootstrap.png" alt="logo bootstrap" />
 <img class="logoskill wow rotateIn" data-wow-duration="1200ms" data-wow-delay="450ms" data-wow-offset="200"
 src="./portfolio/image/logo_symfony.png" alt="logo symfony" />
+<img class="logoskill wow rotateIn" data-wow-duration="1200ms" data-wow-delay="450ms" data-wow-offset="200"
+src="./portfolio/image/logo_sass.png" alt="logo sass" />
+<img class="logoskill wow rotateIn" data-wow-duration="600ms" data-wow-delay="450ms" data-wow-offset="200"
+src="./portfolio/image/logo_angular.png" alt="logo angular" />
 
 <!--.........................FRONT................-->
   <section id="front">
@@ -323,8 +324,6 @@ src="./portfolio/image/logo_symfony.png" alt="logo symfony" />
     <img class="logoskill wow rotateIn" data-wow-duration="600ms" data-wow-delay="450ms" data-wow-offset="200"
     src="./portfolio/image/logo_javascript.png" alt="logo javascript" />
     <img class="logoskill wow rotateIn" data-wow-duration="600ms" data-wow-delay="450ms" data-wow-offset="200"
-    src="./portfolio/image/logo_angular.png" alt="logo angular" />
-    <img class="logoskill wow rotateIn" data-wow-duration="600ms" data-wow-delay="450ms" data-wow-offset="200"
     src="./portfolio/image/logo_jquery.png" alt="logo jquery" />
   </section>
 
@@ -336,6 +335,8 @@ src="./portfolio/image/logo_symfony.png" alt="logo symfony" />
     src="./portfolio/image/logo_php.png" alt="logo php" />
     <img class="logoskill wow rotateIn" data-wow-duration="600ms" data-wow-delay="450ms" data-wow-offset="200"
     src="./portfolio/image/logo_sql.png" alt="logo sql" />
+    <img class="logoskill wow rotateIn" data-wow-duration="600ms" data-wow-delay="450ms" data-wow-offset="200"
+    src="./portfolio/image/logo_nodejs.png" alt="logo node js" />
   </section>
   </div>
 
@@ -347,14 +348,15 @@ src="./portfolio/image/logo_symfony.png" alt="logo symfony" />
     <h2>Mes réalisations</h2>
 
     <p>
-La seule façon de faire du bon travail est d’aimer ce que l'on fait. Je suis fier de tous mes projets, petits et grands,
+La meilleure façon de faire du bon travail est d’aimer ce que l'on fait. Je suis fier de tous mes projets, petits et grands,
 car ils m'ont tous permis d'apprendre quelques choses et de pousser mes limites.
 Pour faire un excellent travail , je suis constamment à la recherche de nouveaux défis et possibilités d'amélioration.
 Déterminé à travailler plus dur et plus fort vers la perfection.
     </p>
-    <!--..........ICI UN ECRAN......-->
 
-    <a href="#"><img id="ordi" src="./portfolio/image/ordi2.png" alt="Photo d'écran" /></a>
+    <!--..........ICI UN ECRAN......-->
+    <a href="projets.html"><img id="ordi" src="./portfolio/image/ordi2.png" alt="Mes projets" /></a>
+
 
 
   </section>
@@ -416,7 +418,9 @@ Déterminé à travailler plus dur et plus fort vers la perfection.
 
 
       <section id="contact">
+
     	<h2>Contact</h2>
+
       <!--ICONE FLECHE LOCALISATION-->
     	<img class="imgcontact" src="./portfolio/image/icone/gps.png" alt="adresse" /><br>
       <p>40 Rue de la redoute 30 300 Beaucaire</p>
@@ -426,6 +430,7 @@ Déterminé à travailler plus dur et plus fort vers la perfection.
       <!--ICONE ENVELOPPE-->
     	<img class="imgcontact" src="./portfolio/image/icone/web.png" alt="mail" /><br>
       <p>jonathan.gomez.web@gmail.com</p>
+
 
 
       <p id="copyright">Copyright © 2016 | Jonathan Gomez | Mentions légales</p>
