ajout logo github et cordova

--- a/index.html
+++ b/index.html
@@ -50,14 +50,14 @@
 <!--LOGO NAV-->
   <ul class ="container-fluid logomenu wow bounceInUp" data-wow-duration="3s" data-wow-delay="500ms">
 
-	<li><a href="https://twitter.com/Jogomezzzz">
+	<li><a href="https://twitter.com/Jogomezzzz" target="new">
       <img class="logosociaux" src="./portfolio/image/logo_twitter.png" alt="Twitter" /></a></li>
-		<li><a href="https://www.facebook.com/profile.php?id=100012290583102">
+		<li><a href="https://www.facebook.com/profile.php?id=100012290583102" target="new">
       <img class="logosociaux" src="./portfolio/image/logo_facebook.png" alt="Facebook" /></a></li>
-		<li><a href="https://fr.linkedin.com/in/jonathan-gomez-04793695">
+		<li><a href="https://fr.linkedin.com/in/jonathan-gomez-04793695" target="new">
       <img class="logosociaux" src="./portfolio/image/logo_linkedin.png" alt="Linkedin" /></a></li>
-		<li><a href="https://github.com/Jogomez13">
-      <img id="logogithub" src="./portfolio/image/logo_github.png" alt="Github" /></a></li>
+		<li><a href="https://github.com/Jogomez13" target="new">
+      <img class="logosociaux" src="./portfolio/image/logo_github.png" alt="Github" /></a></li>
 
 	</ul>
 
@@ -84,7 +84,7 @@
       Vous cherchez un Développeur Web ?</h2>
       <p class="wow slideInLeft" data-wow-duration="2s" data-wow-delay="450ms" data-wow-offset="200">
       Ça tombe bien ! Je suis passionné par le web et je suis actuellement une formation de Développeur Web
-        au sein de <a class="js-scrollTo" href="#">BeWeb</a>.
+        au sein de <a class="js-scrollTo" href="#" target="new">BeWeb</a>.
 
         Si mon profil vous intéresse n'hésitez pas à me <a href="#contact">contacter</a> et à regarder
         <a href="#realisation">mes réalisations.</a></p></br>
@@ -219,10 +219,10 @@
                Compétences pour ce poste : Qualités rédactionnelles, fiabilité, réactivité et sociabilité.
 
             </p>
-            <a href="https://www.facebook.com/BewebLunel">
+            <a href="https://www.facebook.com/BewebLunel" target="new">
               <img class="community" src="./portfolio/image/fbbeweb.png" alt="fbbeweb" /></a>
 
-            <a href="https://twitter.com/BeWebLunel">
+            <a href="https://twitter.com/BeWebLunel" target="new">
               <img class="community" src="./portfolio/image/twitterbeweb.png" alt="fbbeweb" /></a>
   				</li>
 
@@ -312,6 +312,8 @@ src="./portfolio/image/logo_symfony.png" alt="logo symfony" />
 src="./portfolio/image/logo_sass.png" alt="logo sass" />
 <img class="logoskill wow rotateIn" data-wow-duration="600ms" data-wow-delay="450ms" data-wow-offset="200"
 src="./portfolio/image/logo_angular.png" alt="logo angular" />
+<img class="logoskill wow rotateIn" data-wow-duration="600ms" data-wow-delay="450ms" data-wow-offset="200"
+src="./portfolio/image/logo_cordova.png" alt="logo cordova" />
 
 <!--.........................FRONT................-->
   <section id="front">
@@ -374,10 +376,10 @@ Déterminé à travailler plus dur et plus fort vers la perfection.
 
           <p>
             Je me suis lancé le défi de lire les
-            <a class="personal"href="https://personalmba.com/best-business-books/">99 livres du Personal MBA</a>
+            <a class="personal"href="https://personalmba.com/best-business-books/" target="new">99 livres du Personal MBA</a>
             (les meilleurs livres Business).</br></br>
 
-            Je suis membre de <a class="personal"href="http://www.toastmasters.org/">Toastmaster
+            Je suis membre de <a class="personal"href="http://www.toastmasters.org/" target="new">Toastmaster
             </a>, une association internationale dont l'objectif
             est d'aider ses membres à s'améliorer en matière de communication et de leadership par
             la prise de parole en public.</br></br>
@@ -399,9 +401,9 @@ Déterminé à travailler plus dur et plus fort vers la perfection.
       Je suis également abonné au Stade Vélodrome(Olympique de Marseille). J'ai d'ailleurs un
       <a class="personal"href="http://www.om-maniac.fr/">
         Blog</a>,
-        une page <a class="personal"href="https://www.facebook.com/OM.Maniac.13/">Facebook</a> et
-        un <a class="personal"href="https://twitter.com/ommaniac">Twitter</a> consacré à l'OM.</p>
-        <a class="personal"href="http://www.om-maniac.fr/">
+        une page <a class="personal"href="https://www.facebook.com/OM.Maniac.13/" target="new">Facebook</a> et
+        un <a class="personal"href="https://twitter.com/ommaniac" target="new">Twitter</a> consacré à l'OM.</p>
+        <a class="personal"href="http://www.om-maniac.fr/" target="new">
           <img id="ommaniac" src="./portfolio/image/om.maniac.png" alt="om maniac"></a>
       </figcaption>
     </figure>
